Menu styles on small devices fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,12 +222,13 @@ button{
 /* ----- ----- Show Menu ----- ----- */
 .show-menu{
     top: 0;
+    background: var(--container-color);
 }
 
 /* ----- ----- Change Background Header ----- ----- */
 .scroll-header{
-    /* background: var(--container-color); */
-    backdrop-filter: blur(10px);
+    background: var(--container-color);
+    /* backdrop-filter: blur(10px); */
 }
 
 /* ----- ----- Active Link ----- ----- */
